# eludris-autodoc-py

./: .pre-commit-config.yaml  README.md  pyproject.toml
codegen/: __init__.py  cst.py  gen.py  utils.py
eludris_autodoc/: __init__.py  errors.py  files.py  gateway.py  instance.py  messaging.py  sessions.py  undefined.py  users.py
scripts/: __init__.py  autodoc.py
