[tool.poetry]
name = "eludris-autodoc"
version = "0.1.0"
description = ""
authors = ["Chromosomologist <chromosomologist@gmail.com>"]
readme = "README.md"
packages = [{include = "eludris_autodoc"}]

[tool.poetry.dependencies]
python = "^3.8"
attrs = "^23.1.0"

[tool.poetry.group.dev.dependencies]
aiohttp = "^3.8.6"
libcst = "^1.1.0"
ruff = "^0.1"
pre-commit = "^3.5.0"
pyright = "^1.1.331"
ipykernel = "^6.25.2"

[tool.poetry.scripts]
"generate-autodoc" = "scripts.autodoc:_sync_main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.10"
include = ["codegen", "eludris_autodoc"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportImportCycles = false

[tool.ruff]
target-version = "py310"
line-length = 100

exclude = [
    "examples",
]

select = ["ALL"]
ignore = [
    # `self` and `cls` do not need annotations.
    "ANN101", "ANN102",
    # Magic methods do not need documentation.
    "D105",
    # Class docstrings are at the class level.
    "D107",
    # Docstrings start on first line after class definition (incompatibility between D203 and D211).
    "D203",
    # Docstrings start on the first line (`"""text\n..."""`; incompatibility between D212 and D213).
    "D213",
    # Pyright error codes are obnoxiously long.
    "PGH003",
    # Autodoc types sadly shadow builtins, we just gotta cope.
    "A003",
    # Module docstrings starting with "This" are fine.
    "D404",
    # Annoyingly prevents us from making simple TODO comments.
    "TD", "FIX",
    # We use assert for inline type-casting.
    "S101"
]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"__init__.py" = [
    # Wildcard imports are fine in __init__; duplicating exports is a pain to maintain.
    "F403", "F405",
]
"scripts/*" = [
    # Allow printing in scripts.
    "T201"
]
"eludris_autodoc/*" = [
    # We can't make any guarantees about docstrings as we're not the ones writing them.
    # We therefore disable D205 (blank line after summary) and E501 (line length) in these files.
    "D205", "E501"
]
